--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <ul class = "js-toDoList">
     </ul>
     <div class = "buttonBox">
-        <button class  ="js-darkmode">Dark Mode</button>
+        <button class  ="js-darkmode">🌙</button>
     </div>
   </body>
   <script src = "src/greeting.js"></script>
